Fix textLength position adjustment for the "adjust spacing" case

There should be no advance adjustment after the last character (really,
"typographic unit"), so divide the excess space by the character count
minus one - i.e the number of gaps - rather than the character count.

BUG=719522

Review-Url: https://codereview.chromium.org/2870393002
Cr-Commit-Position: refs/heads/master@{#470928}

Former-commit-id: 308e792b8d4648ba4e298c80faca80bc780b5735